# gedalib_mambrus

./: .gitignore  README.md  aclocal.m4  autogen.sh  configure.in  install.sh  install_gedalib.sh
dot/: README.md  gafrc  gafrc.ac  gafrc.in  gnetlistrc  gschemrc
src/: README.md
sym/: 7seg-LED-1D.sym  STP16CP05TTR.sym  TSL257.sym
sym/micro/st/: STM32F103Cx.sym  STM32F103Rx.sym  STM32F103Vx.sym
sym/sensors/light/light_to_frequency/: TSL235R.sym
tragesym/: README  README.md  template.xml
tragesym/7seg-LED/: 7seg-LED.src  7seg-LED.xml
tragesym/STM32F103xx/: BGA100_table.txt  LQFP100.xml  LQFP100_table.txt  LQFP48.xml  LQFP48_table.txt  LQFP64.xml  LQFP64_table.txt  README.md  STM32F103Cx.src  STM32F103Rx.src  STM32F103Vx.src  all_table.txt
tragesym/STP16CP05TTR/: README  STP16CP05TTR.src  STP16CP05TTR.xml
tragesym/sensors/light/: README.md
